--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,12 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["education", "learning", "kids", "api"],
+  "keywords": [
+    "education",
+    "learning",
+    "kids",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3"
