--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
-DB_NAME=Smart Step Learning1
+DB_NAME=smart_step_learning
 
 # JWT Secret (change this to a secure random string in production)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
