--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
+    "node-fetch": "^2.7.0",
     "robotjs": "^0.6.0",
     "serialport": "^13.0.0"
   },
