--- a/backend/.env
+++ b/backend/.env
@@ -13,3 +13,14 @@ FRONTEND_URL=http://localhost:3000
 
 # File Upload Configuration
 MAX_FILE_SIZE=5242880
+
+# ============================================
+# Arduino Quiz Buzzer (SAFE FOR PRESENTATION)
+# ============================================
+# Set to false = no crashes, guaranteed!
+# Set to true = will try to connect, won't crash if fails
+
+ARDUINO_ENABLED=false
+
+# Backend is 100% crash-proof with Arduino enabled or disabled!
+# Use keyboard keys A, B, C, D in the quiz
