--- a/backend/.env
+++ b/backend/.env
@@ -4,23 +4,19 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=smart_step_learning
 
-# JWT Secret (change this to a secure random string in production)
+
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
-# Server Configuration
+
 PORT=5001
 FRONTEND_URL=http://localhost:3000
 
-# File Upload Configuration
+
 MAX_FILE_SIZE=5242880
 
-# ============================================
-# Arduino Quiz Buzzer (SAFE FOR PRESENTATION)
-# ============================================
-# Set to false = no crashes, guaranteed!
-# Set to true = will try to connect, won't crash if fails
 
-ARDUINO_ENABLED=false
 
-# Backend is 100% crash-proof with Arduino enabled or disabled!
-# Use keyboard keys A, B, C, D in the quiz
+ARDUINO_ENABLED=true
+ARDUINO_PORT=/dev/cu.usbmodem11301
+
+
